adição de dependências

--- a/swing/boletos/nbproject/project.properties
+++ b/swing/boletos/nbproject/project.properties
@@ -29,11 +29,19 @@ dist.jar=${dist.dir}/boletos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-lang-2.4.jar=../../exemplo_bopepo/lib/commons-lang-2.4.jar
+file.reference.itext-2.0.8.jar=../../exemplo_bopepo/lib/itext-2.0.8.jar
+file.reference.jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar=../../exemplo_bopepo/lib/jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar
 file.reference.JRimum-Bopepo-SNAPSHOT-20110415-bin.jar=C:\\Users\\suporte-cercomp\\Documents\\Matheus\\boletos-master\\swing\\boletos\\JRimum-Bopepo-SNAPSHOT-20110415-bin.jar
+file.reference.log4j-1.2.15.jar=../../exemplo_bopepo/lib/log4j-1.2.15.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.JRimum-Bopepo-SNAPSHOT-20110415-bin.jar}
+    ${file.reference.JRimum-Bopepo-SNAPSHOT-20110415-bin.jar}:\
+    ${file.reference.jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar}:\
+    ${file.reference.commons-lang-2.4.jar}:\
+    ${file.reference.itext-2.0.8.jar}:\
+    ${file.reference.log4j-1.2.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
