--- a/swing/boletos/nbproject/project.properties
+++ b/swing/boletos/nbproject/project.properties
@@ -30,10 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-lang-2.4.jar=../../exemplo_bopepo/lib/commons-lang-2.4.jar
+file.reference.commons-lang-2.4.jar-1=lib/commons-lang-2.4.jar
 file.reference.itext-2.0.8.jar=../../exemplo_bopepo/lib/itext-2.0.8.jar
+file.reference.itext-2.0.8.jar-1=lib/itext-2.0.8.jar
 file.reference.jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar=../../exemplo_bopepo/lib/jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar
+file.reference.jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar-1=lib/jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar
 file.reference.JRimum-Bopepo-SNAPSHOT-20110415-bin.jar=C:\\Users\\suporte-cercomp\\Documents\\Matheus\\boletos-master\\swing\\boletos\\JRimum-Bopepo-SNAPSHOT-20110415-bin.jar
 file.reference.log4j-1.2.15.jar=../../exemplo_bopepo/lib/log4j-1.2.15.jar
+file.reference.log4j-1.2.15.jar-1=lib/log4j-1.2.15.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +45,11 @@ javac.classpath=\
     ${file.reference.jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar}:\
     ${file.reference.commons-lang-2.4.jar}:\
     ${file.reference.itext-2.0.8.jar}:\
-    ${file.reference.log4j-1.2.15.jar}
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.commons-lang-2.4.jar-1}:\
+    ${file.reference.itext-2.0.8.jar-1}:\
+    ${file.reference.jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar-1}:\
+    ${file.reference.log4j-1.2.15.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
