adição de lib: json-simple

--- a/swing/boletos/nbproject/project.properties
+++ b/swing/boletos/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.itext-2.0.8.jar-1=lib/itext-2.0.8.jar
 file.reference.jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar=../../exemplo_bopepo/lib/jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar
 file.reference.jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar-1=lib/jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar
 file.reference.JRimum-Bopepo-SNAPSHOT-20110415-bin.jar=C:\\Users\\suporte-cercomp\\Documents\\Matheus\\boletos-master\\swing\\boletos\\JRimum-Bopepo-SNAPSHOT-20110415-bin.jar
+file.reference.json-simple-1.1.jar=lib/json-simple-1.1.jar
 file.reference.log4j-1.2.15.jar=../../exemplo_bopepo/lib/log4j-1.2.15.jar
 file.reference.log4j-1.2.15.jar-1=lib/log4j-1.2.15.jar
 includes=**
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.commons-lang-2.4.jar-1}:\
     ${file.reference.itext-2.0.8.jar-1}:\
     ${file.reference.jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar-1}:\
-    ${file.reference.log4j-1.2.15.jar-1}
+    ${file.reference.log4j-1.2.15.jar-1}:\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
