Reorganização da GUI e finalização da leitura, boleto sendo emitido

--- a/swing/boletos/nbproject/private/private.properties
+++ b/swing/boletos/nbproject/private/private.properties
@@ -1,6 +1,11 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.commons-lang-2.4.jar=/home/kurai/Downloads/commons-lang-2.4.jar
+file.reference.itext-2.0.8.jar=/home/kurai/Downloads/itext-2.0.8.jar
+file.reference.jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar=/home/kurai/Downloads/jrimum-bopepo-0.2.3-DEV-20150223.025027-58-dep.jar
+file.reference.JRimum-Bopepo-SNAPSHOT-20110415-bin.jar=/home/kurai/Downloads/JRimum-Bopepo-SNAPSHOT-20110415-bin.jar
+file.reference.log4j-1.2.15.jar=/home/kurai/Downloads/log4j-1.2.15.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/ruan/.netbeans/8.2/build.properties
+user.properties.file=/home/kurai/.netbeans/9.0/build.properties
