adição dos combobox ao load/save

--- a/swing/boletos/nbproject/private/private.properties
+++ b/swing/boletos/nbproject/private/private.properties
@@ -8,4 +8,4 @@ file.reference.JRimum-Bopepo-SNAPSHOT-20110415-bin.jar=/home/kurai/Downloads/JRi
 file.reference.log4j-1.2.15.jar=/home/kurai/Downloads/log4j-1.2.15.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/kurai/.netbeans/9.0/build.properties
+user.properties.file=/home/ruan/.netbeans/8.2/build.properties
